# IWildCam-CLIP-Zero-Shot

./: .gitignore  .kaggleignore  README.md  install.sh  kaggle_btel_flyp.py  kaggle_eval_drm_stmp_adapter.py  kaggle_eval_drm_wise_tip_adapter.py  kaggle_eval_tail_prototype_adapter.py  kaggle_main.py  kaggle_train_flyp_vitl14.py  kernel-metadata.json  pyproject.toml
clip/: clip.py  model.py
docs/: loo_bcpd_pilot.md  results.md
kaggle-cct20-lesvi-eval/: kaggle_main.py  kernel-metadata.json
kaggle-cct20-lesvi-freeze/: kaggle_main.py  kernel-metadata.json
kaggle-drm-official-wise-baseline/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-loo-bcpd-pilot/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-no-tpa-control/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-stp/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-tip-adapter-balanced-control/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-tip-adapter-control/: kaggle_main.py  kernel-metadata.json
kaggle-drm-wise-tpa-control/: kaggle_main.py  kernel-metadata.json
kaggle-flyp-lesvi-confirm/: kaggle_main.py  kernel-metadata.json
kaggle-flyp-lesvi-freeze/: kaggle_main.py  kernel-metadata.json
kaggle-flyp-selective-stp-v0/: kaggle_main.py  kernel-metadata.json
kaggle-flyp-stp-mechanism-audit/: kaggle_main.py  kernel-metadata.json
kaggle-flyp-vfep-v0/: kaggle_main.py  kernel-metadata.json
kaggle-lesvi-audit-artifacts/: audit_manifest.json  class_mapping.json  confirm_viability_aggregate.json  confirmation_genesis_ledger.json  dataset-metadata.json
scripts/: README.md  (+16 more)
(+178 files in other folders)
